--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gravatar": "^1.1.0",
     "heapdump": "^0.3.0",
     "less": "^2.0.0",
+    "lodash": "^3.10.1",
     "logrotate-stream": "^0.2.3",
     "lru-cache": "^2.6.1",
     "lwip": "0.0.7",
