--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "underscore.deep": "^0.5.1",
     "validator": "^4.0.5",
     "winston": "^1.0.1",
-    "xregexp": "~2.0.0"
+    "xregexp": "~2.0.0",
+    "nodebb-plugin-category-notifications": "^1.0.5"
   },
   "devDependencies": {
     "mocha": "~1.13.0",
