--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "async": "~1.4.2",
+    "bcrypt": "^0.8.5",
     "bcryptjs": "~2.2.1",
     "body-parser": "^1.9.0",
     "colors": "^1.1.0",
@@ -41,6 +42,7 @@
     "mmmagic": "^0.3.13",
     "morgan": "^1.3.2",
     "nconf": "~0.7.1",
+    "nodebb-plugin-category-notifications": "^1.0.5",
     "nodebb-plugin-composer-default": "1.0.13",
     "nodebb-plugin-dbsearch": "0.2.16",
     "nodebb-plugin-emoji-extended": "0.4.9",
@@ -75,8 +77,7 @@
     "underscore.deep": "^0.5.1",
     "validator": "^4.0.5",
     "winston": "^1.0.1",
-    "xregexp": "~2.0.0",
-    "nodebb-plugin-category-notifications": "^1.0.5"
+    "xregexp": "~2.0.0"
   },
   "devDependencies": {
     "mocha": "~1.13.0",
